# routers/api/v1/tag.go
@@ -13,8 +13,12 @@ import (
 )
 
 // @Summary 获取多个文章标签
+// @Tags tags
 // @Produce json
-// @Success 200 {string} json "{"code":200,"data":{"lists": [], "total": 0},"msg":"ok"}"
+// @Param Authorization header string true "Bearer Token"
+// @Param name formData string false "Name"
+// @Param state formData int false "State"
+// @Success 200 {string} json "{"code":200,"data":{"lists": [], "total": 0},"message":"ok"}"
 // @Router /api/v1/tags [get]
 func GetTags(c *gin.Context) {
 	name := c.Query("name")
@@ -40,11 +44,13 @@ func GetTags(c *gin.Context) {
 }
 
 // @Summary 新增文章标签
-// @Produce  json
-// @Param name query string true "Name"
-// @Param state query int false "State"
-// @Param created_by query int false "CreatedBy"
-// @Success 200 {string} json "{"code":200,"data":null,"msg":"ok"}"
+// @Tags tags
+// @Produce json
+// @Param Authorization header string true "Bearer Token"
+// @Param name formData string true "Name"
+// @Param state formData int false "State"
+// @Param created_by formData int true "CreatedBy"
+// @Success 200 {string} json "{"code":200,"data":ID,"message":"ok"}"
 // @Router /api/v1/tags [post]
 func AddTag(c *gin.Context) {
 	name := c.PostForm("name")
@@ -79,12 +85,14 @@ func AddTag(c *gin.Context) {
 }
 
 // @Summary 修改文章标签
-// @Produce  json
-// @Param id param int true "ID"
-// @Param name query string true "ID"
-// @Param state query int false "State"
-// @Param modified_by query string true "ModifiedBy"
-// @Success 200 {string} json "{"code":200,"data":null,"msg":"ok"}"
+// @Tags tags
+// @Produce json
+// @Param Authorization header string true "Bearer Token"
+// @Param id path int true "ID"
+// @Param name formData string true "ID"
+// @Param state formData int false "State"
+// @Param modified_by formData string true "ModifiedBy"
+// @Success 200 {string} json "{"code":200,"data":null,"message":"ok"}"
 // @Router /api/v1/tags/{id} [put]
 func EditTag(c *gin.Context) {
 	id := com.StrTo(c.Param("id")).MustInt()
@@ -132,9 +140,11 @@ func EditTag(c *gin.Context) {
 }
 
 // @Summary 删除文章标签
+// @Tags tags
 // @Produce json
-// @Param id param int true "ID"
-// @Success 200 {string} json "{"code":200,"data":null,"msg":"ok"}"
+// @Param Authorization header string true "Bearer Token"
+// @Param id path int true "ID"
+// @Success 200 {string} json "{"code":200,"data":null,"message":"ok"}"
 // @Router /api/v1/tags/{id} [delete]
 func DeleteTag(c *gin.Context) {
 	id := com.StrTo(c.Param("id")).MustInt()
